# altius

./: .env.example  .gitignore  ASSIGNMENT.md  README.md  alembic.ini
.claude/skills/agno-agent (1)/: SKILL.md
.claude/skills/aha-moments/: SKILL.md
.claude/skills/animejs (1)/: SKILL.md
.playwright-mcp/: page-2026-06-24T11-25-10-011Z.yml
backend/: README.md  config.py  pipeline.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/api/: main.py
backend/api/routers/: chat.py  files.py  holdings.py  sync.py
backend/classifier/: document_classifier.py
backend/crawler/: __init__.py  portal_crawler.py
backend/db/: migrations.py  models.py  session.py
backend/extractor/: statement_extractor.py
backend/indexer/: __init__.py  indexer.py
backend/llm/: gemini_client.py
backend/pdf_parser/: __init__.py  parser.py
backend/rag/: __init__.py  chat.py  portfolio.py
backend/tests/: test_chat_router.py  test_classifier.py  test_config.py  test_crawler_idempotency.py  test_db_unique.py  test_extractor.py  test_files.py  test_health.py  test_holdings.py  test_holdings_after_sync.py  test_indexer.py  test_pdf_parser.py  test_portfolio_chat.py  test_rag_chat.py  test_sync.py  test_sync_diff.py
docs/: PROJECT_DEEP_DIVE.md
frontend/: .env.development  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: REQUIREMENTS_COVERAGE.md  chat.spec.ts  files.spec.ts  holdings.spec.ts  nav.spec.ts  sync.spec.ts
frontend/src/: App.tsx  main.tsx
(+93 files in other folders)
