[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "altius-backend"
version = "0.1.0"
description = "Investor Document Platform — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # Config / env
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # HTTP client
    "httpx>=0.27.0",
    # Browser automation
    "playwright>=1.44.0",
    # PDF parsing
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    # Vector store
    "chromadb>=0.5.0",
    # LLM / embeddings (Gemini)
    # gemini-2.x chat + models/text-embedding-004 embeddings
    "google-genai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",  # for TestClient async support
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
markers = [
    "live: mark a test as requiring a live Gemini API key (skipped by default)",
]
